--- a/binance/binance_api/templates/login.html
+++ b/binance/binance_api/templates/login.html
@@ -1,10 +1,21 @@
-{% extends 'main.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
   <h2>Войти</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Войти</button>
+    <button name="btn_login_in" value="Войти" type="submit">Войти</button>
   </form>
-{% endblock %}
+
+</body>
+
+</html>
